--- a/Base/QTCLI/Resources/UI/qSlicerCLIModule.ui
+++ b/Base/QTCLI/Resources/UI/qSlicerCLIModule.ui
@@ -65,6 +65,9 @@
           <property name="NodeType">
            <string>vtkMRMLCommandLineModuleNode</string>
           </property>
+          <property name="ShowHidden">
+           <bool>true</bool>
+          </property>
          </widget>
         </item>
        </layout>
