--- a/Applications/SlicerQT/Resources/UI/qSlicerMainWindow.ui
+++ b/Applications/SlicerQT/Resources/UI/qSlicerMainWindow.ui
@@ -6,21 +6,33 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>787</width>
+    <height>631</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>SlicerQT</string>
   </property>
-  <widget class="QWidget" name="centralwidget"/>
+  <widget class="QWidget" name="centralwidget">
+   <layout class="QVBoxLayout" name="verticalLayout_4">
+    <property name="spacing">
+     <number>0</number>
+    </property>
+    <property name="margin">
+     <number>0</number>
+    </property>
+    <item>
+     <widget class="qVTKRenderView" name="VTKRenderView"/>
+    </item>
+   </layout>
+  </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
-     <height>24</height>
+     <width>787</width>
+     <height>26</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -467,6 +479,11 @@
    <class>qSlicerModulePanel</class>
    <extends>qSlicerWidget</extends>
    <header>qSlicerModulePanel.h</header>
+  </customwidget>
+  <customwidget>
+   <class>qVTKRenderView</class>
+   <extends>QWidget</extends>
+   <header>qVTKRenderView.h</header>
   </customwidget>
  </customwidgets>
  <resources>
