ENH: SlicerQt: Remove useless QLabel in qCTKSliderSpinBoxLabel. Users tend to use that instead of having an external QLabel, as a result, the panels sliders/spinboxes aren't aligned if a couple of qCTKSliderSpinbBoxLabel are in a QVerticalLayout. It's better to use a QGridlayout with QLabel in the first column and qCTKSliderSPinbBoxLabel in the other column.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@11811 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qMRMLWidgets/Resources/UI/qMRMLTransformSliders.ui
+++ b/Libs/qMRMLWidgets/Resources/UI/qMRMLTransformSliders.ui
@@ -41,9 +41,6 @@
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
-        <property name="LabelTextVisible">
-         <bool>false</bool>
-        </property>
        </widget>
       </item>
       <item row="1" column="0">
@@ -60,9 +57,6 @@
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
-        </property>
-        <property name="LabelTextVisible">
-         <bool>false</bool>
         </property>
         <property name="TypeOfTransform">
          <enum>qMRMLLinearTransformSlider::TRANSLATION_PA</enum>
@@ -83,9 +77,6 @@
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
-        </property>
-        <property name="LabelTextVisible">
-         <bool>false</bool>
         </property>
         <property name="TypeOfTransform">
          <enum>qMRMLLinearTransformSlider::TRANSLATION_IS</enum>
@@ -241,8 +232,13 @@
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>qMRMLLinearTransformSlider</class>
+   <class>qCTKSliderSpinBoxLabel</class>
    <extends>QWidget</extends>
+   <header>qCTKSliderSpinBoxLabel.h</header>
+  </customwidget>
+  <customwidget>
+   <class>qMRMLLinearTransformSlider</class>
+   <extends>qCTKSliderSpinBoxLabel</extends>
    <header>qMRMLLinearTransformSlider.h</header>
    <container>1</container>
   </customwidget>
