BUG: SlicerQT: Remove the QLabel from qCTKSliderSpinBoxLabel, it was more confusing than anything else. qCTKSliderSpingBoxLabel was using qCTKSlider that was containings some bugs (because it was deriving from a QSlider. We now use qCTKDoubleSlider. We also connect the qMRMLLinearTransformSliders using the valueChanged signal instead of sliderMoved signal (sliderMoved should be used only when Tracking is off, and a specific behavior should happen when the user manually moves the slider.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@11834 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTCoreModules/Resources/UI/qSlicerTransformsModule.ui
+++ b/Base/QTCoreModules/Resources/UI/qSlicerTransformsModule.ui
@@ -423,9 +423,9 @@
   </connection>
   <connection>
    <sender>TranslationSliders</sender>
-   <signal>sliderMoved()</signal>
+   <signal>valuesChanged()</signal>
    <receiver>RotationSliders</receiver>
-   <slot>reset()</slot>
+   <slot>resetUnactiveSliders()</slot>
    <hints>
     <hint type="sourcelabel">
      <x>64</x>
