--- a/Libs/qCTKWidgets/Resources/UI/qCTKSliderSpinBoxLabel.ui
+++ b/Libs/qCTKWidgets/Resources/UI/qCTKSliderSpinBoxLabel.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>352</width>
+    <width>226</width>
     <height>32</height>
    </rect>
   </property>
@@ -21,20 +21,7 @@
     <number>2</number>
    </property>
    <item>
-    <widget class="QLabel" name="Label">
-     <property name="text">
-      <string>MySlider</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="qCTKSlider" name="Slider">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
+    <widget class="qCTKDoubleSlider" name="Slider">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
@@ -47,9 +34,9 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>qCTKSlider</class>
-   <extends>QSlider</extends>
-   <header>qCTKSlider.h</header>
+   <class>qCTKDoubleSlider</class>
+   <extends>QWidget</extends>
+   <header>qCTKDoubleSlider.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
