ENH: SlicerQt: propagate changes off r11834 to the Tractography module.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@11836 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/TractographyFiducialSeeding/Resources/UI/qSlicerTractographyFiducialSeedingModule.ui
+++ b/QTModules/TractographyFiducialSeeding/Resources/UI/qSlicerTractographyFiducialSeedingModule.ui
@@ -109,10 +109,13 @@
    <item row="5" column="1">
     <widget class="qCTKSliderSpinBoxLabel" name="StoppingValueSpinBoxLabel">
      <property name="maximum">
-      <double>0.000000000000000</double>
+      <double>1.000000000000000</double>
      </property>
      <property name="value">
       <double>0.000000000000000</double>
+     </property>
+     <property name="singleStep">
+      <double>0.100000000000000</double>
      </property>
     </widget>
    </item>
