--- a/Libs/qCTKWidgets/Resources/UI/qCTKSliderSpinBoxWidget.ui
+++ b/Libs/qCTKWidgets/Resources/UI/qCTKSliderSpinBoxWidget.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>qCTKSliderSpinBoxLabel</class>
- <widget class="QWidget" name="qCTKSliderSpinBoxLabel">
+ <class>qCTKSliderSpinBoxWidget</class>
+ <widget class="QWidget" name="qCTKSliderSpinBoxWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>qCTKSliderSpinBoxLabel</string>
+   <string>qCTKSliderSpinBoxWidget</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <property name="spacing">
