--- a/Libs/qMRMLWidgets/Resources/UI/qMRMLTransformSliders.ui
+++ b/Libs/qMRMLWidgets/Resources/UI/qMRMLTransformSliders.ui
@@ -232,13 +232,13 @@
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>qCTKSliderSpinBoxLabel</class>
+   <class>qCTKSliderSpinBoxWidget</class>
    <extends>QWidget</extends>
-   <header>qCTKSliderSpinBoxLabel.h</header>
+   <header>qCTKSliderSpinBoxWidget.h</header>
   </customwidget>
   <customwidget>
    <class>qMRMLLinearTransformSlider</class>
-   <extends>qCTKSliderSpinBoxLabel</extends>
+   <extends>qCTKSliderSpinBoxWidget</extends>
    <header>qMRMLLinearTransformSlider.h</header>
    <container>1</container>
   </customwidget>
